# ay-async-rust-playground

tide-tests/aytest1/: Cargo.toml
tide-tests/aytest1/.github/workflows/: build-release.yml
tide-tests/aytest1/.oldgit/: COMMIT_EDITMSG  index
tide-tests/aytest1/.oldgit/logs/refs/heads/: master
tide-tests/aytest1/.oldgit/refs/heads/: master
tide-tests/aytest1/src/: main.rs
tide-tests/aytest1/static/: index.html  upload.html
tide-tests/aytest1/templates/: simple.html
