[package]
name = "aytest1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
minreq = { version = "2.3.0", features = ["https-rustls", "json-using-serde"] }
clap = { version = "3.0", features = ["derive"] }
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
tempfile = "*"
handlebars = { version = "*", features = ["dir_source"] }
tide-handlebars = "*"
surf = "*"
async-ssh2 = { version = "*", git = "https://github.com/spebern/async-ssh2.git" }
smol = "*"
